// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bridge selectors getBridgeQuotes returns quote list and fetch data, insufficientBal=false,quotesRefreshCount=2 1`] = `
{
  "adjustedReturn": {
    "usd": "39.080515830123180597564",
    "valueInCurrency": "13.843437163498939081572",
  },
  "cost": {
    "usd": "240.919484169876819402436",
    "valueInCurrency": "0.156562836501060918428",
  },
  "gasFee": {
    "effective": {
      "amount": "3.650105952e-8",
      "usd": "7.300211904e-7",
      "valueInCurrency": "3.650105952e-8",
    },
    "max": {
      "amount": "6.442841952e-8",
      "usd": "0.0000012885683904",
      "valueInCurrency": "6.442841952e-8",
    },
    "total": {
      "amount": "3.650105952e-8",
      "usd": "7.300211904e-7",
      "valueInCurrency": "3.650105952e-8",
    },
  },
  "includedTxFees": null,
  "minToTokenAmount": {
    "amount": "13.98428",
    "usd": "39.100516560144370997564",
    "valueInCurrency": "13.844437199999998601572",
  },
  "sentAmount": {
    "amount": "14",
    "usd": "280",
    "valueInCurrency": "14",
  },
  "swapRate": "0.99887714285714285714",
  "toTokenAmount": {
    "amount": "13.98428",
    "usd": "39.100516560144370997564",
    "valueInCurrency": "13.844437199999998601572",
  },
  "totalMaxNetworkFee": {
    "amount": "0.00100006442841952",
    "usd": "0.0200012885683904",
    "valueInCurrency": "0.00100006442841952",
  },
  "totalNetworkFee": {
    "amount": "0.00100003650105952",
    "usd": "0.0200007300211904",
    "valueInCurrency": "0.00100003650105952",
  },
}
`;

exports[`Bridge selectors getBridgeQuotes returns quote list and fetch data, insufficientBal=false,quotesRefreshCount=5 1`] = `
{
  "adjustedReturn": {
    "usd": "13.84343716349894048",
    "valueInCurrency": "13.84343716349894048",
  },
  "cost": {
    "usd": "0.15656283650105952",
    "valueInCurrency": "0.15656283650105952",
  },
  "gasFee": {
    "effective": {
      "amount": "3.650105952e-8",
      "usd": "3.650105952e-8",
      "valueInCurrency": "3.650105952e-8",
    },
    "max": {
      "amount": "6.442841952e-8",
      "usd": "6.442841952e-8",
      "valueInCurrency": "6.442841952e-8",
    },
    "total": {
      "amount": "3.650105952e-8",
      "usd": "3.650105952e-8",
      "valueInCurrency": "3.650105952e-8",
    },
  },
  "includedTxFees": null,
  "minToTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "sentAmount": {
    "amount": "14",
    "usd": "14",
    "valueInCurrency": "14",
  },
  "swapRate": "0.99887714285714285714",
  "toTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "totalMaxNetworkFee": {
    "amount": "0.00100006442841952",
    "usd": "0.00100006442841952",
    "valueInCurrency": "0.00100006442841952",
  },
  "totalNetworkFee": {
    "amount": "0.00100003650105952",
    "usd": "0.00100003650105952",
    "valueInCurrency": "0.00100003650105952",
  },
}
`;

exports[`Bridge selectors getBridgeQuotes returns quote list and fetch data, insufficientBal=true 1`] = `
{
  "adjustedReturn": {
    "usd": "13.8244364699788096",
    "valueInCurrency": "13.84343716349894048",
  },
  "cost": {
    "usd": "266.1755635300211904",
    "valueInCurrency": "0.15656283650105952",
  },
  "gasFee": {
    "effective": {
      "amount": "3.650105952e-8",
      "usd": "7.300211904e-7",
      "valueInCurrency": "3.650105952e-8",
    },
    "max": {
      "amount": "6.442841952e-8",
      "usd": "0.0000012885683904",
      "valueInCurrency": "6.442841952e-8",
    },
    "total": {
      "amount": "3.650105952e-8",
      "usd": "7.300211904e-7",
      "valueInCurrency": "3.650105952e-8",
    },
  },
  "includedTxFees": null,
  "minToTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "sentAmount": {
    "amount": "14",
    "usd": "280",
    "valueInCurrency": "14",
  },
  "swapRate": "0.99887714285714285714",
  "toTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "totalMaxNetworkFee": {
    "amount": "0.00100006442841952",
    "usd": "0.0200012885683904",
    "valueInCurrency": "0.00100006442841952",
  },
  "totalNetworkFee": {
    "amount": "0.00100003650105952",
    "usd": "0.0200007300211904",
    "valueInCurrency": "0.00100003650105952",
  },
}
`;
